# trueclassic-paid-media-decision-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-lock.txt
backend/api/: __init__.py  calibration_service.py  ingestion_service.py  inventory_service.py  llm.py  main.py  marts.py  model_evidence_service.py  recommendation.py  schemas.py  store.py
backend/decision_engine/: __init__.py  config.py  economics.py
data/: README.md
docs/: AI_WORKFLOW.md  CONSTRAINTS.md  DECISIONS.md  FINAL_PLAN.md  PROJECT_REPORT.md  SLIDE_DECK.md  UI_INTEGRATION_MAP.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: Charts.tsx  globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
scripts/: build_marts.py  cm_floor_sweep.py  economics_report.py  generate_synthetic_data.py  model_report.py  verify_fingerprint.py  volatility_stress_test.py
tests/: conftest.py  test_api.py  test_audit_store.py  test_business_invariants.py  test_calibration.py  test_canonical_schemas.py  test_cm_floor.py  test_contribution.py  test_determinism.py  test_economics.py  test_engine.py  test_envelopes.py  test_fingerprints.py  test_ingestion.py  test_intervals.py  test_latent_isolation.py  test_llm_narration.py  test_marts.py  test_model_report.py  test_observable.py  test_pacing.py  test_planted_defects.py  test_report_consistency.py  test_selection.py  test_typed_tables.py  test_value_sanity.py
(+63 files in other folders)
