[project]
name = "true-classic-paid-media-decision-engine"
version = "0.0.0"
description = "True Classic Paid Media Decision Engine — auditable, vendor-neutral decision & governance layer"
requires-python = ">=3.11,<3.14"
readme = "README.md"

# Package metadata intentionally uses compatible ranges. Reproducible demo
# installation is pinned EXACTLY through requirements-lock.txt (which is what
# reproduces the dataset fingerprint in tests/test_fingerprints.py); bumps to the
# lock must be recorded in docs/DECISIONS.md.
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.2,<4",
    "pyarrow>=15",
    "pydantic>=2.7,<3",
    "pandera>=0.20,<1",
    "duckdb>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Stage 3+ modeling/optimizer deps (NOT installed for Stage 0):
modeling = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "scipy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
